On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
modified:   1. Build and deploy your first website/10. Aside - Anchor Tags/work.html

--- a/1. Build and deploy your first website/14. Build a Personal Website/index.html
+++ b/1. Build and deploy your first website/14. Build a Personal Website/index.html
@@ -6,9 +6,18 @@
         <script src="index.js"></script>
     </head>
     <body>
-        <!-- 
-        Challenge 1:
-        Write the HTML for your personal website.
-        -->
+        <img src="h2.jpeg" />
+        <h1> My first website</h1>
+        <h2> Some fact about me </h2>
+        <ul>
+            <li> i am a computer science student</li>
+            <li> i study at ensate </li>
+            <li> i am 21 years old </li>
+            <li> i am from morocco </li>
+            <li> i am learning web developement </li>
+        </ul>
+    <p>Please chec my <a href="https://www.linkedin.com/in/mohammed-ez-zouak-95738a200/" target="_blank"  > linkedin</a></p>  
+        <input type="text" placeholder="Enter your email" />
+        <button>Subscribe</button>
     </body>
 </html>
