--- a/1. Build and deploy your first website/11. Add an anchor tag to Google.com/index.html
+++ b/1. Build and deploy your first website/11. Add an anchor tag to Google.com/index.html
@@ -11,5 +11,5 @@ Challenge:
 Add the anchor tag that points to blog.html.
 The link should be wrapped in a <p> tag.
 -->
-
+<p>we protect ur privacy .<a href="blog.html" target="_blank" >learn how </a></p>
 
