--- a/1. Build and deploy your first website/8. Interactive elements - input tags - input types/index.html
+++ b/1. Build and deploy your first website/8. Interactive elements - input tags - input types/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"><h1>Welcome!</h1>
 <p>You have been granted access to the platform. Please create an account.</p>
-<button>Sign up!</button>
+<input type="text" placeholder="email">
+<input type="password" placeholder="password">
+<input type="date" placeholder="date of birth">
+<input type="color" placeholder="hhhhh">
+<input type="file" placeholder="profil image">
+<button>Log in !</button>
 
 <!--
 Challenge:
