--- a/2. Build a Google.com clone/5. Link to the CSS file/index.html
+++ b/2. Build a Google.com clone/5. Link to the CSS file/index.html
@@ -1,12 +1,12 @@
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">    
-    <!-- 
-    Challenge: Link to the CSS file!
-    Hint: google it ;)
-     -->
+    <head>  
+    
+     <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <img src="google.png" />
         <input type="text" />
+        
+
     </body>
 </html>
