--- a/2. Build a Google.com clone/9. Divs rule the world/index.html
+++ b/2. Build a Google.com clone/9. Divs rule the world/index.html
@@ -3,7 +3,14 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <img src="google.png" />
-        <input type="text" />
+        <div class="main">
+            <img src="google.png" />
+            <input type="text" />    
+        </div>
+        <div class="buttons">
+            <button>Google Search</button>
+            <button>I'm Feeling Lucky</button>
+        </div>
+       
     </body>
 </html>
