--- a/3. Build a digital Business Card/3. Add alt attribute/index.html
+++ b/3. Build a digital Business Card/3. Add alt attribute/index.html
@@ -3,12 +3,12 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <div>
+        <div class="card">
             <!-- 
             Challenge:
             Add an alt text to the image element.
             -->
-            <img src="images/per.png">
+            <img class="img" src="images/per.png " alt="lmao probably ">
             <h3>Per Harald Borgen</h3>
             <p>Frontend Developer</p>
             <h4>Oslo, Norway</h4>
